@@ -2,8 +2,8 @@
 #define INCL_ACSVERSION_H
 
 /* This string is written to the output primary header as CAL_VER. */
-#define ACS_CAL_VER "10.3.2 (26-Apr-2021)"
-#define ACS_CAL_VER_NUM "10.3.2"
+#define ACS_CAL_VER "10.3.3 (03-May-2021)"
+#define ACS_CAL_VER_NUM "10.3.3"
 
 /* name and version number of the CTE correction algorithm */
 #define ACS_GEN1_CTE_NAME "PixelCTE 2012"
